# ChangeLog for virtual/perl-threads-shared
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-threads-shared/ChangeLog,v 1.1 2010/02/15 19:43:23 tove Exp $

  15 Feb 2010; Torsten Veller <tove@gentoo.org>
  +perl-threads-shared-1.32.ebuild, +metadata.xml:
  Import to gentoo from perl-experimental

  07 Jan 2010; Torsten Veller <tove@gentoo.org>
  perl-threads-shared-1.28.ebuild, perl-threads-shared-1.29.ebuild,
  perl-threads-shared-1.31.ebuild, perl-threads-shared-1.32.ebuild:
  Add empty HOMEPAGE and LICENSE. Add mandatory SRC_URI

*perl-threads-shared-1.32 (21 Oct 2009)

  21 Oct 2009; Kent Fredric <kentfredric@gmail.com>
  +perl-threads-shared-1.32.ebuild:
  Bumped

  23 Sep 2009; Torsten Veller <tove@gentoo.org>
  perl-threads-shared-1.29.ebuild:
  Add perl-5.10.1 virtual

*perl-threads-shared-1.31 (26 Aug 2009)

  26 Aug 2009; Kent Fredric <kentfredric@gmail.com>
  +perl-threads-shared-1.31.ebuild:
  Bumped

*perl-threads-shared-1.29 (27 Jun 2009)

  27 Jun 2009; Torsten Veller <tove@gentoo.org>
  +perl-threads-shared-1.29.ebuild:
  Version bump

  22 Mar 2009; Torsten Veller <tove@gentoo.org>
  +virtual/perl-threads-shared/metadata.xml:
  Initial commit
