@@ -1,0 +1,15 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-threads-shared/perl-threads-shared-1.33.ebuild,v 1.1 2010/03/14 09:58:29 tove Exp $
+
+DESCRIPTION="Virtual for threads-shared"
+HOMEPAGE=""
+SRC_URI=""
+
+LICENSE=""
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+DEPEND=""
+RDEPEND="~perl-core/threads-shared-${PV}"
