@@ -1,6 +1,11 @@
 # ChangeLog for virtual/perl-threads
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-threads/ChangeLog,v 1.1 2010/02/15 19:36:36 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-threads/ChangeLog,v 1.2 2010/03/14 09:55:47 tove Exp $
+
+*perl-threads-1.76 (14 Mar 2010)
+
+  14 Mar 2010; Torsten Veller <tove@gentoo.org> +perl-threads-1.76.ebuild:
+  Version bump
 
   15 Feb 2010; Torsten Veller <tove@gentoo.org> +perl-threads-1.75.ebuild,
   +metadata.xml:
