@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-threads-shared
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-threads-shared/ChangeLog,v 1.1 2010/02/15 19:43:23 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-threads-shared/ChangeLog,v 1.2 2010/03/14 09:58:29 tove Exp $
+
+*perl-threads-shared-1.33 (14 Mar 2010)
+
+  14 Mar 2010; Torsten Veller <tove@gentoo.org>
+  +perl-threads-shared-1.33.ebuild:
+  Version bump
 
   15 Feb 2010; Torsten Veller <tove@gentoo.org>
   +perl-threads-shared-1.32.ebuild, +metadata.xml:
